--- a/server-side/package.json
+++ b/server-side/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.1",
     "nodemon": "^3.1.0",
+    "readline": "^1.3.0",
     "sqlite3": "^5.1.7"
   }
 }
